k8s/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1234
